Acceptance Tests fixed