@@ -21,10 +21,17 @@
       <artifactId>ingestion-core</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-instrument-tomcat</artifactId>
+      <version>${spring.version}</version>
+      <scope>compile</scope>
+    </dependency>
+
   </dependencies>
-  
+
   <properties>
-  	<sli.home>${project.parent.basedir}/..</sli.home>
+    <sli.home>${project.parent.basedir}/..</sli.home>
   </properties>
 
 
@@ -34,32 +41,36 @@
     <plugins>
 
       <plugin>
-        <groupId>org.mortbay.jetty</groupId>
-        <artifactId>maven-jetty-plugin</artifactId>
-        <version>${maven.jetty.version}</version>
+        <groupId>org.codehaus.cargo</groupId>
+        <artifactId>cargo-maven2-plugin</artifactId>
+        <version>1.2.2</version>
         <configuration>
-          <scanIntervalSeconds>5</scanIntervalSeconds>
-          <systemProperties>
-            <systemProperty>
-                <name>sli.conf</name>
-                <value>${sli.conf}</value>
-            </systemProperty>
-            <systemProperty>
-              <name>sli.env</name>
-              <value>local</value>
-            </systemProperty>
-            <systemProperty>
-              <name>sli.encryption.keyStore</name>
-              <value>${project.parent.basedir}/../data-access/dal/keyStore/localKeyStore.jks</value>
-            </systemProperty>
+          <container>
+            <containerId>tomcat7x</containerId>
 
-          </systemProperties>
-          <connectors>
-            <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-              <port>8000</port>
-              <maxIdleTime>60000</maxIdleTime>
-            </connector>
-          </connectors>
+            <zipUrlInstaller>
+              <url>http://archive.apache.org/dist/tomcat/tomcat-7/v7.0.27/bin/apache-tomcat-7.0.27.zip</url>
+            </zipUrlInstaller>
+
+            <dependencies>
+              <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-instrument-tomcat</artifactId>
+              </dependency>
+            </dependencies>
+
+            <systemProperties>
+              <sli.conf>${sli.conf}</sli.conf>
+              <sli.env>local</sli.env>
+              <sli.encryption.keyStore>${project.parent.basedir}/../data-access/dal/keyStore/localKeyStore.jks</sli.encryption.keyStore>
+            </systemProperties>
+          </container>
+
+          <configuration>
+            <properties>
+              <cargo.jvmargs>-Xms1g -Xmx1g -Xss4m -XX:PermSize=384m -XX:MaxPermSize=384m -XX:MaxHeapFreeRatio=70 -XX:+UseParallelGC -XX:ParallelGCThreads=20</cargo.jvmargs>
+            </properties>
+          </configuration>
         </configuration>
       </plugin>
 
@@ -67,36 +78,5 @@
 
   </build>
 
-  <profiles>
-    <profile>
-      <id>Custom Configuration</id>
-      <activation>
-        <property>
-          <name>sli.config</name>
-        </property>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>org.slc.sli</groupId>
-          <artifactId>${sli.config}</artifactId>
-          <version>${project.parent.version}</version>
-        </dependency>
-      </dependencies>
-    </profile>
-    <profile>
-      <id>Default Configuration</id>
-      <activation>
-        <property>
-          <name>!sli.config</name>
-        </property>
-      </activation>
-      <dependencies>
-<!--        <dependency>
-          <groupId>org.slc.sli</groupId>
-          <artifactId>sli-configuration</artifactId>
-        </dependency> -->
-      </dependencies>
-    </profile>
-  </profiles>
 
 </project>
